Correction de l'alignement du bouton toc en mobile (#994)

--- a/assets/sass/_theme/design-system/table_of_contents.sass
+++ b/assets/sass/_theme/design-system/table_of_contents.sass
@@ -110,6 +110,8 @@
         &::after
             color: $toc-color
             margin-right: $icon-toc-margin-right
+            text-align: center
+
         @include media-breakpoint-down(desktop)
             align-items: center
             display: flex
